tests/artifacts/perf/peer-lazy-dml-fallback-tanbear-20260507T1805Z/stdout/test-direct-simple-update-delete.err
  [2m2026-05-07T18:15:58.986718Z[0m [32m INFO[0m [1;32mrch::hook[0m[32m: [32mSelected worker: ts2 at ubuntu@192.168.1.124 (28 slots, speed 50.0)[0m
    [2;3mat[0m rch/src/hook.rs:314 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:15:59.319441Z[0m [32m INFO[0m [1;32mrch::hook[0m[32m: [32mStarting remote compilation pipeline for frankensqlite (hash: e425b324acb4981b)[0m
    [2;3mat[0m rch/src/hook.rs:4933 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:15:59.319526Z[0m [32m INFO[0m [1;32mrch::hook[0m[32m: [32mPrepared dependency sync manifest for 28 roots[0m
    [2;3mat[0m rch/src/hook.rs:4955 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:00.705064Z[0m [32m INFO[0m [1;32mrch::hook[0m[32m: [32mSyncing project to worker ts2...[0m
    [2;3mat[0m rch/src/hook.rs:4982 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:00.705155Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mLoaded 1 pattern(s) from .rchignore (total: 51)[0m
    [2;3mat[0m rch/src/transfer.rs:574 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:00.705167Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite -> /data/projects/frankensqlite on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1031 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:01.299038Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 593ms[0m
    [2;3mat[0m rch/src/transfer.rs:1100 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:01.299127Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite -> /data/projects/frankensqlite/crates/fsqlite on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1031 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:01.614773Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 315ms[0m
    [2;3mat[0m rch/src/transfer.rs:1100 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:01.614876Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-ast -> /data/projects/frankensqlite/crates/fsqlite-ast on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1031 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:01.934881Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 319ms[0m
    [2;3mat[0m rch/src/transfer.rs:1100 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:01.935009Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-btree -> /data/projects/frankensqlite/crates/fsqlite-btree on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1031 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:02.248952Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 313ms[0m
    [2;3mat[0m rch/src/transfer.rs:1100 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:02.249067Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-c-api -> /data/projects/frankensqlite/crates/fsqlite-c-api on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1031 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:02.569482Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 320ms[0m
    [2;3mat[0m rch/src/transfer.rs:1100 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:02.569564Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-cli -> /data/projects/frankensqlite/crates/fsqlite-cli on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1031 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:02.882223Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 312ms[0m
    [2;3mat[0m rch/src/transfer.rs:1100 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:02.882296Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-core -> /data/projects/frankensqlite/crates/fsqlite-core on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1031 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:03.204204Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 321ms[0m
    [2;3mat[0m rch/src/transfer.rs:1100 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:03.204303Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-e2e -> /data/projects/frankensqlite/crates/fsqlite-e2e on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1031 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:03.560010Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 355ms[0m
    [2;3mat[0m rch/src/transfer.rs:1100 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:03.560086Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-error -> /data/projects/frankensqlite/crates/fsqlite-error on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1031 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:03.876588Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 316ms[0m
    [2;3mat[0m rch/src/transfer.rs:1100 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:03.876689Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-ext-fts3 -> /data/projects/frankensqlite/crates/fsqlite-ext-fts3 on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1031 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:04.193453Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 316ms[0m
    [2;3mat[0m rch/src/transfer.rs:1100 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:04.193579Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-ext-fts5 -> /data/projects/frankensqlite/crates/fsqlite-ext-fts5 on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1031 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:04.509831Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 316ms[0m
    [2;3mat[0m rch/src/transfer.rs:1100 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:04.510005Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-ext-icu -> /data/projects/frankensqlite/crates/fsqlite-ext-icu on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1031 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:04.831388Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 321ms[0m
    [2;3mat[0m rch/src/transfer.rs:1100 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:04.831526Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-ext-json -> /data/projects/frankensqlite/crates/fsqlite-ext-json on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1031 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:05.150491Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 318ms[0m
    [2;3mat[0m rch/src/transfer.rs:1100 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:05.150593Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-ext-misc -> /data/projects/frankensqlite/crates/fsqlite-ext-misc on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1031 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:05.469578Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 318ms[0m
    [2;3mat[0m rch/src/transfer.rs:1100 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:05.469707Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-ext-rtree -> /data/projects/frankensqlite/crates/fsqlite-ext-rtree on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1031 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:05.783849Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 314ms[0m
    [2;3mat[0m rch/src/transfer.rs:1100 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:05.784069Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-ext-session -> /data/projects/frankensqlite/crates/fsqlite-ext-session on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1031 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:06.110200Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 326ms[0m
    [2;3mat[0m rch/src/transfer.rs:1100 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:06.110325Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-func -> /data/projects/frankensqlite/crates/fsqlite-func on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1031 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:06.427961Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 317ms[0m
    [2;3mat[0m rch/src/transfer.rs:1100 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:06.428083Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-harness -> /data/projects/frankensqlite/crates/fsqlite-harness on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1031 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:06.748046Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 319ms[0m
    [2;3mat[0m rch/src/transfer.rs:1100 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:06.748147Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-mvcc -> /data/projects/frankensqlite/crates/fsqlite-mvcc on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1031 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:07.073094Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 324ms[0m
    [2;3mat[0m rch/src/transfer.rs:1100 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:07.073208Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-observability -> /data/projects/frankensqlite/crates/fsqlite-observability on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1031 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:07.386170Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 312ms[0m
    [2;3mat[0m rch/src/transfer.rs:1100 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:07.386255Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-pager -> /data/projects/frankensqlite/crates/fsqlite-pager on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1031 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:07.710473Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 324ms[0m
    [2;3mat[0m rch/src/transfer.rs:1100 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:07.710566Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-parser -> /data/projects/frankensqlite/crates/fsqlite-parser on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1031 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:08.020427Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 309ms[0m
    [2;3mat[0m rch/src/transfer.rs:1100 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:08.020516Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-planner -> /data/projects/frankensqlite/crates/fsqlite-planner on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1031 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:08.343802Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 323ms[0m
    [2;3mat[0m rch/src/transfer.rs:1100 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:08.343894Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-types -> /data/projects/frankensqlite/crates/fsqlite-types on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1031 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:08.672624Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 328ms[0m
    [2;3mat[0m rch/src/transfer.rs:1100 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:08.672725Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-vdbe -> /data/projects/frankensqlite/crates/fsqlite-vdbe on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1031 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:08.988765Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 316ms[0m
    [2;3mat[0m rch/src/transfer.rs:1100 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:08.988881Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-vfs -> /data/projects/frankensqlite/crates/fsqlite-vfs on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1031 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:09.302763Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 313ms[0m
    [2;3mat[0m rch/src/transfer.rs:1100 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:09.302892Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-wal -> /data/projects/frankensqlite/crates/fsqlite-wal on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1031 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:09.620354Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 317ms[0m
    [2;3mat[0m rch/src/transfer.rs:1100 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:09.620446Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankensqlite/crates/fsqlite-wasm -> /data/projects/frankensqlite/crates/fsqlite-wasm on ts2[0m
    [2;3mat[0m rch/src/transfer.rs:1031 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:09.941843Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 321ms[0m
    [2;3mat[0m rch/src/transfer.rs:1100 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:09.941928Z[0m [32m INFO[0m [1;32mrch::hook[0m[32m: [32mSync complete: 19113 files, 637106 bytes in 9216ms[0m
    [2;3mat[0m rch/src/hook.rs:5142 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:10.226281Z[0m [32m INFO[0m [1;32mrch::hook[0m[32m: [32mExecuting command remotely: env 'TMPDIR=/data/tmp/frankensqlite-peer-lazy-dml-tmp' 'CARGO_BUILD_JOBS=8' cargo test -p fsqlite-core test_direct_simple_update_delete -- --nocapture[0m
    [2;3mat[0m rch/src/hook.rs:5169 [2;3mon[0m ThreadId(1)

  [2m2026-05-07T18:16:10.226315Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mRewriting CARGO_TARGET_DIR for remote execution (worker-scoped path): /data/tmp/frankensqlite-peer-lazy-dml-target -> /data/projects/frankensqlite/.rch-target[0m
    [2;3mat[0m rch/src/transfer.rs:499 [2;3mon[0m ThreadId(1)

   Compiling fsqlite-core v0.1.3 (/data/projects/frankensqlite/crates/fsqlite-core)
error[E0599]: no method named `program_is_placeholder` found for struct `PreparedStatement<'conn>` in the current scope
      --> crates/fsqlite-core/src/connection.rs:116473:26
       |
  3889 | pub struct PreparedStatement<'conn> {
       | ----------------------------------- method `program_is_placeholder` not found for this struct
...
116473 |             plain_update.program_is_placeholder(),
       |                          ^^^^^^^^^^^^^^^^^^^^^^ method not found in `PreparedStatement<'_>`

error[E0599]: no method named `program_is_placeholder` found for struct `PreparedStatement<'conn>` in the current scope
      --> crates/fsqlite-core/src/connection.rs:116495:29
       |
  3889 | pub struct PreparedStatement<'conn> {
       | ----------------------------------- method `program_is_placeholder` not found for this struct
...
116495 |             !indexed_update.program_is_placeholder(),
       |                             ^^^^^^^^^^^^^^^^^^^^^^ method not found in `PreparedStatement<'_>`

error[E0599]: no method named `program_is_placeholder` found for struct `PreparedStatement<'conn>` in the current scope
      --> crates/fsqlite-core/src/connection.rs:116511:26
       |
  3889 | pub struct PreparedStatement<'conn> {
       | ----------------------------------- method `program_is_placeholder` not found for this struct
...
116511 |             plain_delete.program_is_placeholder(),
       |                          ^^^^^^^^^^^^^^^^^^^^^^ method not found in `PreparedStatement<'_>`

error[E0599]: no method named `program_is_placeholder` found for struct `PreparedStatement<'conn>` in the current scope
      --> crates/fsqlite-core/src/connection.rs:116533:29
       |
  3889 | pub struct PreparedStatement<'conn> {
       | ----------------------------------- method `program_is_placeholder` not found for this struct
...
116533 |             !indexed_delete.program_is_placeholder(),
       |                             ^^^^^^^^^^^^^^^^^^^^^^ method not found in `PreparedStatement<'_>`

error[E0599]: no method named `program_is_placeholder` found for struct `PreparedStatement<'conn>` in the current scope
      --> crates/fsqlite-core/src/connection.rs:121621:25
       |
  3889 | pub struct PreparedStatement<'conn> {
       | ----------------------------------- method `program_is_placeholder` not found for this struct
...
121621 |             update_stmt.program_is_placeholder(),
       |                         ^^^^^^^^^^^^^^^^^^^^^^ method not found in `PreparedStatement<'_>`

error[E0599]: no method named `program_is_placeholder` found for struct `PreparedStatement<'conn>` in the current scope
      --> crates/fsqlite-core/src/connection.rs:121625:25
       |
  3889 | pub struct PreparedStatement<'conn> {
       | ----------------------------------- method `program_is_placeholder` not found for this struct
...
121625 |             delete_stmt.program_is_placeholder(),
       |                         ^^^^^^^^^^^^^^^^^^^^^^ method not found in `PreparedStatement<'_>`

For more information about this error, try `rustc --explain E0599`.
error: could not compile `fsqlite-core` (lib test) due to 6 previous errors
warning: build failed, waiting for other jobs to finish...
  [2m2026-05-07T18:16:53.288378Z[0m [32m INFO[0m [1;32mrch::hook[0m[32m: [32mRemote command finished: exit=101 in 43061ms[0m
    [2;3mat[0m rch/src/hook.rs:5290 [2;3mon[0m ThreadId(1)

[RCH] remote ts2 failed (exit 101)
Command exited with non-zero status 101
	Command being timed: "rch exec -- env TMPDIR=/data/tmp/frankensqlite-peer-lazy-dml-tmp CARGO_TARGET_DIR=/data/tmp/frankensqlite-peer-lazy-dml-target CARGO_BUILD_JOBS=8 cargo test -p fsqlite-core test_direct_simple_update_delete -- --nocapture"
	User time (seconds): 0.93
	System time (seconds): 1.28
	Percent of CPU this job got: 4%
	Elapsed (wall clock) time (h:mm:ss or m:ss): 0:54.30
	Average shared text size (kbytes): 0
	Average unshared data size (kbytes): 0
	Average stack size (kbytes): 0
	Average total size (kbytes): 0
	Maximum resident set size (kbytes): 76084
	Average resident set size (kbytes): 0
	Major (requiring I/O) page faults: 0
	Minor (reclaiming a frame) page faults: 78702
	Voluntary context switches: 2196
	Involuntary context switches: 1471
	Swaps: 0
	File system inputs: 0
	File system outputs: 1088
	Socket messages sent: 0
	Socket messages received: 0
	Signals delivered: 0
	Page size (bytes): 4096
	Exit status: 101
